# SmartHouseSimulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.bat
.CMakeFiles/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
App/: App.cpp  App.h  RenderManager.cpp  RenderManager.h  Scene.cpp  Scene.h
Assets/: Alphabet.fbx  Plane.fbx  cube.fbx  shader.fsh  shader.hlsl  shader.vsh  shader1.fsh  shader1.vsh  shader2.fsh  shader2.vsh  shader3.fsh  sphere.fbx  test.fbx  testMesh.fbx  untitled.fbx
GraphicsEngine/: FrameBuffer.h  GraphicConfig.h  GraphicsEngine.cpp  GraphicsEngine.h  IndexArrayObject.cpp  IndexArrayObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
Graphs/: Graph.h  Graph.hpp  ListGraph.h  ListGraph.hpp  MatrixGraph.h  MatrixGraph.hpp
Graphs/Algorithms/: Astar.hpp  BelmanFord.hpp  BoruvkaMST.hpp  Dijkstra.hpp  FordFulkerson.hpp  JohnsonsAlgorithm.hpp  Kuna.hpp  Tarjan.hpp
HelpApps/: PNG.cpp  PNG.h  makefile  resourceMaker.c
HelpApps/ImageWindow/: ImageWindow.cpp
IOSystem/: 3dFile.cpp  BMP.cpp  FBXfile.cpp  FBXfile.h  IOSystem.cpp  IOSystem.h  IOstructures.cpp  IOstructures.h  VertexDictionary.h  VertexDictionary.imp
IOSystem/Android/: AndroidFileManager.cpp  AndroidFileManager.h  AndroidFilter.cpp  AndroidFilter.h  AndroidInputManager.cpp  AndroidInputManager.h
IOSystem/Archiph/: archiver.c  archiver.h  main.c
IOSystem/Archiph/testDir/B/: questions.txt
IOSystem/Archiph/testDir/C/: questions.txt
IOSystem/IOS/: iosDevelopmentBridge.js  makefile  test.cpp
IOSystem/TTFReader/: FileManager.cpp  FileManager.h  TTFStructures.h  main.cpp  makefile
IOSystem/Windows/: KeyBoard.cpp  KeyBoard.h  Window.cpp  Window.h  resource.h  winFileManager.cpp
ImageEditor/: ImageEditor.h  Layer.h  Line.h  PerlinNoise.cpp  PerlinNoise.h  bmpEditor.h
Logic/: CameraControlSystem.h  ECS.cpp  ECS.h  IOSP.cpp  IOSP.h  InputEventSystem.cpp  InputEventSystem.h  Lamp.h  MotionSensor.h  Physic.h  ScreenLogic.cpp  ScreenLogic.h  Thermometer.h  Transform.h  server.h  watch.h
MAIN/Android/: AndroidManifest.xml  keystore.jks  makefile
MAIN/Android/jni/: AndroidFilter.cpp  com_UrbanEngine_main_NativeLib.h
MAIN/Android/res/layout/: main.xml  mainactivity.xml
MAIN/Android/res/values/: strings.xml
MAIN/Android/src/com/UrbanEngine/main/: MainActivity.java  NativeLib.java  RendererWrapper.java
MAIN/Windows/: ManifestWindows.rc  ManifestWindows.res  main.cpp
Math/: Color.cpp  Color.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  umath.cpp  umath.h
Proto/HouseGeneration/: HouseGeneration.cpp  Text Document.txt  makefile
Proto/RandomLine/: RandomLine.cpp  makefile
Proto/Strategy/: main.cpp  makefile
Proto/VoronoiDiagram/: Statistic.xlsx  VoronoiDiagram.cpp  makefile
doc/: building.txt  platforms.txt
libs/include/: gl2.h  glad.cpp  glad.h
